FLTK study: Simplest app using FLTK.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
-            "program": "${workspaceFolder}/build/CppTemplate",
+            "program": "${workspaceFolder}/build/src/FLTKtest",
             "args": [],
             "cwd": "${workspaceFolder}"
         }
