--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "editor.rulers": [
         100
     ],
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
